# civitdl

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/model/: mod.rs  model.rs  model_version.rs
