[package]
name = "civitdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive", "env", "string"] }
directories = "4.0.1"
dotenvy = "0.15.6"
env_logger = "0.10.0"
envy = "0.4.2"
futures = "0.3.26"
indicatif = { version = "0.17.3", features = ["tokio"] }
log = { version = "0.4.17", features = ["serde"] }
normpath = { version = "1.1.0", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["serde_json", "json", "stream", "cookies"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "tokio-macros", "tracing"] }
tracing = { version = "0.1.37", features = ["async-await", "log"] }
